[tool.poetry]
name = "packetanalyser"
version = "0.1.0"
description = ""
authors = ["Wizard <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.4"
PyPTables = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
